# dash-widgetbot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  wigitbot_io_skill.md
assets/: style.css
dash_widgetbot/: __init__.py  _bridge.py  _constants.py  _transport.py  action_parser.py  ai_builder.py  ai_image.py  ai_responder.py  ai_schemas.py  components.py  crate.py  gen_renderer.py  gen_responder.py  gen_schemas.py  gen_store.py  interactions.py  preview.py  progress.py  webhook.py  widget.py
pages/: ai_chat.py  bot_bridge.py  crate_commands.py  crate_events.py  crate_styling.py  discord_to_dash.py  home.py  multi_instance.py  rich_message_preview.py  rich_messages.py  slash_commands.py  webhook_send.py  widget_embed.py
